src/app/globals.css
:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

.wrapper{
  text-align: center;
  color: #00ff00;
  padding-right: 11vw;
}

.resourceDropdown {
  padding: 8px;
  background-color: rgb(53, 53, 53);
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  top: 8px;
  right: 8px;
  position: fixed;
  z-index: 99;
  font-family: 'Courier New', Courier, monospace;
  text-align: center;
}

.resourceLink{
  color: #05ff00;
  list-style-type: none; /* Remove bullets */
  background-color: rgb(53, 53, 53); /* Add gray box */
  padding: 8px;
  margin-bottom: 8px;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  text-decoration: underline;
  font-family: 'Courier New', Courier, monospace;
  text-align: center;
  /* width: 10vw; */
}

.homeButton{
  height: 10vh;
  width: 10vh;
  font-size: 10vh; /* Scale the emoji size with the container */
  position: fixed;
  top: 0;
  left: 0;
  z-index: 100;
  padding: 16px;
  margin: 4px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.pageTitle{
  color: #05ff00;
  text-align: center;
  margin: 32px;
  font-family: 'Courier New', Courier, monospace;
}

.pageContent{
  color: #00ff00; /* Matrix-like green color */
  font-family: 'Courier New', Courier, monospace; /* Monospace font for a techy look */
  text-align: center;
  margin: 16px;
  /* padding-right: 11vw;
  padding-left: 11vw; */
}

.pageTips {
  color: #00ff00; /* Matrix-like green color */
  font-family: 'Courier New', Courier, monospace; /* Monospace font for a techy look */
  text-align: center;
  justify-content: center;
  margin: 16px;
  list-style-position: inside; /* Center align bullets */
}

.pageSubheading{
  color: #05ff00;
  text-align: center;
  font-family: 'Courier New', Courier, monospace;
  margin: 16px;
  margin-top: 5vh;
}

.pageLink{
  text-decoration: underline;
  padding-bottom: 10vh;
}

/* .resourceDropdown:hover,
.resourceList:hover{
  background-color: rgb(75, 75, 75);
  color: #50ad50;
}

.resourceDropdown:hover + .resourceList,
.resourceList:hover{
  display: inline-block;
} */

.resourceList {
  /* display: none; */
  position: absolute;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);

  width: 161px;
  padding: 8px;
  border-radius: 8px;
  top: 60px;
  right: 0px;
  width: 100%;
  z-index: 100;
  text-align: center;
}


.scrollTopButton{
  background-color: rgb(53, 53, 53);
  color: #50ad50;
  border: 2px solid #50ad50; /*Green border for the outside of the button*/
  border-radius: 50%;
  padding: 16px;
  position: fixed;
  right: 16px;
  bottom: 16px;
}

.scrollTopButton:hover {
  background-color: rgb(75, 75, 75);
  color: #50ad50;
}

.section{
  height: 100vh;
  width: 90vw;
  padding-right: 10vw;
  padding-left: 10vw;
  justify-self: center;
  justify-items: center;
  overflow-wrap: break-word;
  margin-top: 64px;
  color: #00ff00; /* Matrix-like green color */
  font-family: 'Courier New', Courier, monospace; /* Monospace font for a techy look */
  /* text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 15px #00ff00; Glowing effect */
}

.title{
  margin: 32px;
  padding: 16px;
  /* padding-right: 11vw; */
  color: #05ff00;
  text-align: center;
}

.tableOfContents{
  margin-top: 64px;
  margin-bottom: 64px;
}

.tableOfContentsLinks{
  color: rgb(55, 220, 63);
  text-decoration: underline;
  font-size: large;
}
html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

